--- a/app/src/main/res/layout/subdepartment_item_row.xml
+++ b/app/src/main/res/layout/subdepartment_item_row.xml
@@ -82,7 +82,7 @@
         android:textStyle="bold"
         android:textColor="@color/cost_color"
         android:gravity="center"
-        android:text="20,00 ريال"
+        android:text="20,00 "
         android:singleLine="true"
 
         />
