--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +13,7 @@
     tools:context=".Activities.HomeActivity"
     android:orientation="vertical"
     android:weightSum="1"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
 
     <android.support.design.widget.AppBarLayout
@@ -38,7 +45,7 @@
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:text="كروز"
+                    android:text="كروز "
                     android:textSize="18sp"
                     />
                 <TextView
@@ -47,7 +54,7 @@
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:text="Cruise "
+                    android:text="cruise "
                     android:textSize="14sp"
                     />
             </LinearLayout>
@@ -81,3 +88,8 @@
 
     </com.luseen.luseenbottomnavigation.BottomNavigation.BottomNavigationView>
 </LinearLayout>
+
+    <include
+        layout="@layout/bottom_sheet_layout"/>
+
+</android.support.design.widget.CoordinatorLayout>
