--- a/app/src/main/res/layout/fragment_client_register.xml
+++ b/app/src/main/res/layout/fragment_client_register.xml
@@ -3,29 +3,50 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="80dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1"
 
 
     >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight=".93"
         android:background="@drawable/client_login_bg"
 
 
         >
+        <LinearLayout
+            android:id="@+id/ll_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            android:layoutDirection="ltr"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:text="@string/login"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:drawableLeft="@drawable/back_ar_icon"
+                android:gravity="center_vertical"
+                />
+        </LinearLayout>
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             app:civ_border_color="@color/white"
             app:civ_border_width="1dp"
             android:src="@drawable/user_profile"
@@ -48,6 +69,7 @@
             android:hint="@string/client_name"
             android:gravity="center"
             android:inputType="textPersonName"
+            android:textSize="13sp"
 
             />
         <FrameLayout
@@ -80,9 +102,30 @@
                 android:hint="@string/phone_number"
                 android:gravity="center"
                 android:inputType="phone"
+                android:textSize="13sp"
 
                 />
         </FrameLayout>
+        <EditText
+            android:id="@+id/edt_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:singleLine="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/edt_reg_bg"
+            android:layout_marginTop="10dp"
+            android:drawableLeft="@drawable/reg_user_icon"
+            android:paddingLeft="10dp"
+            android:drawablePadding="5dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/colorPrimary"
+            android:textColorHint="@color/cp2"
+            android:hint="@string/user_name"
+            android:gravity="center"
+            android:textSize="13sp"
+
+            />
         <EditText
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
@@ -101,6 +144,7 @@
             android:hint="@string/password"
             android:gravity="center"
             android:inputType="textPassword"
+            android:textSize="13sp"
 
             />
         <EditText
@@ -122,27 +166,27 @@
             android:hint="@string/re_type_password"
             android:gravity="center"
             android:inputType="textPassword"
+            android:textSize="13sp"
 
             />
+        <Button
+            android:id="@+id/reg_btn"
 
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/reg_btn"
+            android:textColor="@color/white"
+            android:text="@string/register"
+            android:paddingRight="30dp"
+            android:paddingLeft="30dp"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:layout_marginTop="40dp"
+            />
 
     </LinearLayout>
-    <Button
-        android:id="@+id/reg_btn"
 
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight=".07"
-        android:layout_marginTop="-18dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/reg_btn"
-        android:textColor="@color/white"
-        android:text="@string/register"
-        android:paddingRight="30dp"
-        android:paddingLeft="30dp"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        />
 
 
 </LinearLayout>
