--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <FrameLayout
         android:id="@+id/img_container"
         android:layout_width="match_parent"
@@ -18,27 +18,7 @@
             android:src="@drawable/sm"
             android:scaleType="centerCrop"
             />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <TextView
-                android:id="@+id/tv_grocery_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:background="@color/cp3"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="بقالة زاد"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="5dp"
-                android:padding="5dp"
-                android:alpha=".85"
 
-                />
             <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
@@ -59,52 +39,46 @@
                 android:paddingRight="5dp"
                 android:textStyle="bold"
                 android:imeOptions="actionSearch"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="40dp"
                 />
-        </LinearLayout>
 
 
     </FrameLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="-20dp"
         android:orientation="vertical"
         android:layout_weight="1"
         >
-        <FrameLayout
-            android:id="@+id/recView_container"
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/tab"
             >
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-            </android.support.v7.widget.RecyclerView>
-            <ProgressBar
-                android:id="@+id/progBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                />
-        </FrameLayout>
-        <Button
-            android:id="@+id/free_deliveryBtn"
+        </android.support.v4.view.ViewPager>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabIndicatorHeight="0dp"
+            app:tabBackground="@drawable/tab_indicator"
+            app:tabTextAppearance="@style/tab_text_size"
+            app:tabTextColor="@color/black"
+            app:tabSelectedTextColor="@color/white"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/delivert_btn"
-            android:layout_marginRight="35dp"
-            android:layout_marginLeft="35dp"
-            android:textColor="@color/white"
-            android:textSize="13sp"
-            android:text="@string/free_delivery"
-            />
-    </LinearLayout>
+            >
+
+        </android.support.design.widget.TabLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
