--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,12 +1,341 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="8dp">
+   <android.support.v7.widget.CardView
+       android:id="@+id/cardView"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:cardBackgroundColor="@color/white"
+       app:cardCornerRadius="5dp"
+       app:contentPadding="8dp"
+
+       >
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical"
+           >
+           <FrameLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_horizontal"
+
+               >
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:id="@+id/image"
+                   android:layout_width="80dp"
+                   android:layout_height="80dp"
+                   android:src="@drawable/user_profile"
+                   app:civ_border_color="@color/colorPrimary"
+                   app:civ_border_width="2dp"
+                   />
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:id="@+id/img_state"
+                   android:layout_width="15dp"
+                   android:layout_height="15dp"
+                   android:layout_gravity="bottom|right"
+                   android:layout_marginBottom="3dp"
+                   android:layout_marginRight="8dp"
+                   android:src="@color/state_on"
+                   android:padding="1dp"
+                   app:civ_border_width="1dp"
+                   app:civ_border_color="@color/white"
+                   />
+           </FrameLayout>
+           <TextView
+               android:id="@+id/tv_name"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center"
+               android:layout_marginTop="5dp"
+               android:gravity="center"
+               android:textSize="15sp"
+               android:textStyle="bold"
+               android:textColor="@color/black"
+               android:text="Emad magdy mohammed"
+
+               />
+           <TextView
+               android:id="@+id/tv_state"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_horizontal"
+               android:layout_marginTop="4dp"
+               android:textSize="13sp"
+               android:textColor="@color/gray"
+               android:text="Active Now"
+               />
+       </LinearLayout>
+   </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:textColor="@color/colorPrimary"
-        android:text="Setting"
-        />
-</FrameLayout>
+        android:layout_marginTop="15dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="5dp"
+        app:contentPadding="8dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15sp"
+                android:text="@string/create_accounts"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="5dp"
+                />
+            <LinearLayout
+                android:id="@+id/ll_client_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:background="@drawable/ll_selector"
+                android:descendantFocusability="blocksDescendants"
+                android:clickable="true"
+                >
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_weight=".25"
+                    android:src="@drawable/blue_add_icon"
+                    android:layout_height="40dp"
+                    android:padding="8dp"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1.75"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:text="@string/create_new_c_account"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/state_off"
+                android:layout_marginRight="35dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="10dp"
+                />
+
+            <LinearLayout
+                android:id="@+id/ll_grocery_account"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/ll_selector"
+                android:descendantFocusability="blocksDescendants"
+                android:clickable="true"
+                >
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_weight=".25"
+                    android:src="@drawable/blue_trolley_icon"
+                    android:layout_height="40dp"
+                    android:padding="8dp"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1.75"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:text="@string/create_new_g_account"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/state_off"
+                android:layout_marginRight="35dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="10dp"
+                />
+
+            <LinearLayout
+                android:id="@+id/ll_driver_account"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/ll_selector"
+                android:descendantFocusability="blocksDescendants"
+                android:clickable="true"
+                >
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_weight=".25"
+                    android:src="@drawable/blue_person_icon"
+                    android:layout_height="40dp"
+                    android:padding="8dp"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1.75"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:text="@string/create_new_d_account"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="5dp"
+        app:contentPadding="8dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15sp"
+                android:text="@string/notifications_amp_sounds"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="5dp"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1.7"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:text="@string/sounds"
+                    android:layout_gravity="center_vertical"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+
+                    />
+                <it.beppi.tristatetogglebutton_library.TriStateToggleButton
+                    android:id="@+id/toggle_sound"
+                    android:layout_width="0dp"
+                    android:layout_weight=".3"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="10dp"
+                    app:tbAnimate="true"
+                    app:tbDefaultStatus="on"
+                    app:tbOnColor="@color/cp2"
+                    app:tbOffColor="@color/gray"
+                    app:tbSpotColor="@color/gray1"
+                    app:tbIsMidSelectable="false"
+
+                    android:layout_gravity="center_vertical"
+
+                    />
+
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/state_off"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1.7"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:text="@string/vibrate"
+                    android:layout_gravity="center_vertical"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+
+                    />
+                <it.beppi.tristatetogglebutton_library.TriStateToggleButton
+                    android:id="@+id/toggle_vibrate"
+
+                    android:layout_width="0dp"
+                    android:layout_weight=".3"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="10dp"
+                    app:tbAnimate="true"
+                    app:tbDefaultStatus="on"
+                    app:tbOnColor="@color/cp2"
+                    app:tbOffColor="@color/gray"
+                    app:tbSpotColor="@color/gray1"
+                    app:tbIsMidSelectable="false"
+                    android:layout_gravity="center_vertical"
+
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
+</ScrollView>
+</android.support.design.widget.CoordinatorLayout>
