--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -28,7 +28,7 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:text="نايف محمد عبد الله"
+        android:text="الاسم"
 
 
         />
@@ -41,7 +41,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="15dp"
         android:textColor="@color/white"
-        android:text="شارع العليا في وسط مدينة الرياض"
+        android:text="العنوان"
         android:layout_gravity="center_horizontal"
         />
 
