--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -9,15 +10,12 @@
             android:title="@string/home"
             android:icon="@drawable/dr_home_icon"
             />
-        <item
-            android:id="@+id/profile"
-            android:title="@string/profile"
-            android:icon="@drawable/dr_person_icon"
-            />
+
         <item
             android:id="@+id/msg"
             android:title="@string/messages"
             android:icon="@drawable/dr_mail_icon"
+            app:actionLayout="@layout/drawer_notification_layout"
             />
         <item
             android:id="@+id/purchases"
