--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,9 @@
     <color name="cost_color">#ff9d29</color>
     <color name="sub_dept">#3fa9fd</color>
     <color name="txt_color">#bcdffb</color>
+    <color name="state_on">#00C853</color>
+    <color name="state_off">#E0E0E0</color>
+    <color name="gray">#bdbdbd</color>
+    <color name="gray1">#f5f5f5</color>
 
 </resources>
