--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<FrameLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <FrameLayout
     android:id="@+id/fragmentsContainer"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,4 +16,5 @@
     android:background="@color/gray0"
     >
 
+</FrameLayout>
 </FrameLayout>
