--- a/app/src/main/res/layout/custom_gps_dialog.xml
+++ b/app/src/main/res/layout/custom_gps_dialog.xml
@@ -39,13 +39,29 @@
         android:layout_marginBottom="10dp"
         android:gravity="center"
         />
-    <Button
-        android:id="@+id/openBtn"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:background="#00000000"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_margin="10dp"
-        android:text="@string/accept"
-        android:textColor="@color/white"
-        />
+
+        >
+        <Button
+            android:id="@+id/openBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="#00000000"
+            android:text="@string/accept"
+            android:textColor="@color/white"
+            />
+        <Button
+            android:id="@+id/cancelBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="#00000000"
+            android:text="@string/cancel"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
+
 </LinearLayout>
