--- a/app/src/main/res/layout/drawer_notification_layout.xml
+++ b/app/src/main/res/layout/drawer_notification_layout.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_width="25dp"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    >
     <TextView
         android:id="@+id/tv_not_txt"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:gravity="center"
         android:background="@drawable/notf_bg"
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold"
-        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:layout_centerVertical="true"
         >
 
     </TextView>
