--- a/app/src/main/res/layout/driver_geocery_not_row.xml
+++ b/app/src/main/res/layout/driver_geocery_not_row.xml
@@ -1,6 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:contentPadding="8dp"
+    app:cardBackgroundColor="@color/white"
+    android:id="@+id/card"
+    android:clickable="false"
+    android:longClickable="false"
+    android:descendantFocusability="blocksDescendants"
+    >
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+
+            >
+            <FrameLayout
+                android:layout_width="95dp"
+                android:layout_height="match_parent">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/image"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/user_profile"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+            </FrameLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:text="Name"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+                <TextView
+                    android:id="@+id/tv_order_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray3"
+                    android:textSize="12sp"
+                    android:text="Address "
+                    android:layout_marginTop="5dp"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
+                    >
+                    <Button
+                        android:id="@+id/btn_accept"
+                        android:layout_width="wrap_content"
+                        android:layout_height="28dp"
+                        android:background="@drawable/accept_btn"
+                        android:textSize="13sp"
+                        android:textColor="@color/white"
+                        android:drawableLeft="@drawable/accept_icon"
+                        android:text="@string/accept2"
+                        android:paddingRight="10dp"
+
+                        android:drawablePadding="5dp"
+                        />
+                    <Button
+                        android:id="@+id/btn_refuse"
+                        android:layout_width="wrap_content"
+                        android:layout_height="28dp"
+                        android:background="@drawable/refuse_btn"
+                        android:textSize="13sp"
+                        android:textColor="@color/colorPrimary"
+                        android:drawableLeft="@drawable/refuse_icon"
+                        android:text="@string/refuse2"
+                        android:paddingRight="10dp"
+                        android:drawablePadding="5dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginLeft="8dp"
+                        />
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp"
+                    android:text="منذ 2 يوم"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/more"
+                    android:textColor="@color/black"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
+
+</android.support.v7.widget.CardView>
