--- a/app/src/main/res/layout/fragment_client_notification.xml
+++ b/app/src/main/res/layout/fragment_client_notification.xml
@@ -2,16 +2,23 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray1"
+    >
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+
+        >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/gray1"
+
             >
 
         </android.support.v7.widget.RecyclerView>
