--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,37 +52,47 @@
         android:layout_height="match_parent"
         android:layout_marginTop="-25dp"
         android:orientation="vertical"
-        android:layout_weight="1"
         >
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_above="@id/tab"
+            android:layout_height="match_parent"
             >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_above="@id/tab"
+                    >
 
-        </android.support.v4.view.ViewPager>
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            app:tabGravity="fill"
-            app:tabMode="fixed"
-            app:tabIndicatorHeight="0dp"
-            app:tabBackground="@drawable/tab_indicator"
-            app:tabTextAppearance="@style/tab_text_size"
-            app:tabTextColor="@color/black"
-            app:tabSelectedTextColor="@color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="8dp"
+                </android.support.v4.view.ViewPager>
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tab"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="8dp"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed"
+                    app:tabIndicatorHeight="0dp"
+                    app:tabBackground="@drawable/tab_indicator"
+                    app:tabTextAppearance="@style/tab_text_size"
+                    app:tabTextColor="@color/black"
+                    app:tabSelectedTextColor="@color/white"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="8dp"
 
-            >
+                    >
 
-        </android.support.design.widget.TabLayout>
-    </RelativeLayout>
+                </android.support.design.widget.TabLayout>
+
+            </RelativeLayout>
+        </FrameLayout>
+          </RelativeLayout>
 
 
 </LinearLayout>
