--- a/app/src/main/res/layout/fragment_myorders_container.xml
+++ b/app/src/main/res/layout/fragment_myorders_container.xml
@@ -13,7 +13,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:orientation="horizontal"
