--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="green">#00ff00</color>
     <color name="transparent">#00000000</color>
     <color name="kohly">#182036</color>
+    <color name="gray2">#fafafa</color>
     <color name="gray3">#9e9e9e</color>
     <color name="gray4">#616161</color>
     <color name="gray5">#424242</color>
