--- a/app/src/main/res/layout/client_not_row.xml
+++ b/app/src/main/res/layout/client_not_row.xml
@@ -69,13 +69,14 @@
                     android:orientation="horizontal"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="5dp"
+                    android:gravity="center_vertical"
                     >
                     <Button
                         android:id="@+id/btn_accept"
                         android:layout_width="wrap_content"
                         android:layout_height="28dp"
                         android:background="@drawable/accept_btn"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         android:textColor="@color/white"
                         android:drawableEnd="@drawable/accept_icon"
                         android:text="@string/accept2"
@@ -88,7 +89,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="28dp"
                         android:background="@drawable/refuse_btn"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         android:textColor="@color/colorPrimary"
                         android:drawableEnd="@drawable/refuse_icon"
                         android:text="@string/refuse2"
