--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Activities.SearchActivity"
-    android:background="@color/gray0"
+    android:background="@color/gray1"
     >
 
 
@@ -22,13 +22,29 @@
             android:orientation="vertical"
             android:layoutDirection="ltr"
             >
-            <ImageView
-                android:id="@+id/img_back"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/black_back_icon"
-                android:padding="5dp"
-                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                >
+                <ImageView
+                    android:id="@+id/img_back"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/black_back_icon"
+                    android:padding="5dp"
+                    android:layout_alignParentLeft="true"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:text="@string/search3"
+                    />
+            </RelativeLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
@@ -68,28 +84,60 @@
                     android:layout_width="0dp"
                     android:layout_weight=".15"
                     android:layout_height="match_parent">
+
                     <ProgressBar
                         android:id="@+id/progBar"
+                        style="?android:progressBarStyleSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="?android:progressBarStyleSmall"
                         android:layout_gravity="center"
-                        android:visibility="invisible"
-                        />
+                        android:visibility="invisible" />
                 </FrameLayout>
             </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/transparent"
         >
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/transparent"
+            >
 
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/no_result_container"
+            android:visibility="gone"
+            >
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/search"
+                android:padding="15dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="17sp"
+                android:textColor="@color/black"
+                android:text="@string/no_search_results"
+                />
+        </LinearLayout>
+    </FrameLayout>
+
 </LinearLayout>
