--- a/app/src/main/res/layout/fragment_grocery_register.xml
+++ b/app/src/main/res/layout/fragment_grocery_register.xml
@@ -67,7 +67,7 @@
             android:layout_marginLeft="30dp"
             android:background="@drawable/edt_reg_bg"
             android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/reg_user_icon"
+            android:drawableStart="@drawable/reg_user_icon"
             android:paddingLeft="10dp"
             android:drawablePadding="5dp"
             android:paddingRight="10dp"
@@ -78,7 +78,7 @@
             android:inputType="textPersonName"
             android:textSize="13sp"
 
-            />
+            android:drawableLeft="@drawable/reg_user_icon" />
         <TextView
             android:id="@+id/tv_upload_image"
             android:layout_width="match_parent"
@@ -87,7 +87,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/edt_reg_img_bg"
-            android:drawableLeft="@drawable/camera_icon"
+            android:drawableStart="@drawable/camera_icon"
             android:paddingLeft="5dp"
             android:drawablePadding="5dp"
             android:paddingRight="10dp"
@@ -95,7 +95,7 @@
             android:textSize="13sp"
             android:text="@string/upload_photo"
             android:gravity="center"
-            />
+            android:drawableLeft="@drawable/camera_icon" />
         <EditText
             android:id="@+id/edt_time"
             android:layout_width="match_parent"
@@ -105,7 +105,7 @@
             android:layout_marginLeft="30dp"
             android:background="@drawable/edt_reg_bg"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/clock"
+            android:drawableStart="@drawable/clock"
             android:paddingLeft="10dp"
             android:drawablePadding="5dp"
             android:paddingRight="10dp"
@@ -116,7 +116,7 @@
             android:inputType="text"
             android:textSize="13sp"
 
-            />
+            android:drawableLeft="@drawable/clock" />
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
                 android:layout_height="40dp"
                 android:singleLine="true"
                 android:background="@drawable/edt_reg_bg"
-                android:drawableLeft="@drawable/phone_icon"
+                android:drawableStart="@drawable/phone_icon"
                 android:paddingLeft="10dp"
                 android:drawablePadding="5dp"
                 android:paddingRight="10dp"
@@ -150,7 +150,7 @@
                 android:textSize="13sp"
 
 
-                />
+                android:drawableLeft="@drawable/phone_icon" />
         </FrameLayout>
         <EditText
             android:id="@+id/edt_username"
@@ -161,7 +161,7 @@
             android:layout_marginLeft="30dp"
             android:background="@drawable/edt_reg_bg"
             android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/reg_user_icon"
+            android:drawableStart="@drawable/reg_user_icon"
             android:paddingLeft="10dp"
             android:drawablePadding="5dp"
             android:paddingRight="10dp"
@@ -171,7 +171,7 @@
             android:gravity="center"
             android:textSize="13sp"
 
-            />
+            android:drawableLeft="@drawable/reg_user_icon" />
         <EditText
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
@@ -181,7 +181,7 @@
             android:layout_marginLeft="30dp"
             android:background="@drawable/edt_reg_bg"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/lock_icon"
+            android:drawableStart="@drawable/lock_icon"
             android:paddingLeft="10dp"
             android:drawablePadding="5dp"
             android:paddingRight="10dp"
@@ -192,7 +192,7 @@
             android:inputType="textPassword"
             android:textSize="13sp"
 
-            />
+            android:drawableLeft="@drawable/lock_icon" />
         <EditText
             android:id="@+id/edt_re_password"
 
@@ -203,7 +203,7 @@
             android:layout_marginLeft="30dp"
             android:background="@drawable/edt_reg_bg"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/lock_icon"
+            android:drawableStart="@drawable/lock_icon"
             android:paddingLeft="10dp"
             android:drawablePadding="5dp"
             android:paddingRight="10dp"
@@ -214,7 +214,7 @@
             android:inputType="textPassword"
             android:textSize="13sp"
 
-            />
+            android:drawableLeft="@drawable/lock_icon" />
 
         <Button
             android:id="@+id/continue_btn"
